--- a/Statinf/estimation-ponctuelle.html
+++ b/Statinf/estimation-ponctuelle.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2019-11-13" />
+<meta name="date" content="2019-11-23" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -239,7 +239,14 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class="chapter" data-level="4.2" data-path="tp-illustration-numerique-des-methodes-destimation-avec-r.html"><a href="tp-illustration-numerique-des-methodes-destimation-avec-r.html#le-maximum-de-vraisemblance"><i class="fa fa-check"></i><b>4.2</b> Le maximum de vraisemblance</a></li>
 <li class="chapter" data-level="4.3" data-path="tp-illustration-numerique-des-methodes-destimation-avec-r.html"><a href="tp-illustration-numerique-des-methodes-destimation-avec-r.html#loi-de-weibull"><i class="fa fa-check"></i><b>4.3</b> Loi de Weibull</a></li>
 </ul></li>
-<li class="chapter" data-level="5" data-path="intervalle-de-confiance.html"><a href="intervalle-de-confiance.html"><i class="fa fa-check"></i><b>5</b> Intervalle de confiance</a></li>
+<li class="chapter" data-level="5" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html"><i class="fa fa-check"></i><b>5</b> Estimation par Intervalle de confiance</a><ul>
+<li class="chapter" data-level="5.1" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#intervalles-de-confiance-pour-pour-les-parametres-de-la-loi-normale"><i class="fa fa-check"></i><b>5.1</b> Intervalles de confiance pour pour les paramètres de la loi normale</a><ul>
+<li class="chapter" data-level="5.1.1" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#intervalle-de-confiance-pour-lesperance-dune-loi-normale-avec-variance-connue"><i class="fa fa-check"></i><b>5.1.1</b> Intervalle de confiance pour l’espérance d’une loi normale avec variance connue</a></li>
+<li class="chapter" data-level="5.1.2" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#intervalle-de-confiance-pour-lesperance-dune-loi-normale-avec-variance-inconnue"><i class="fa fa-check"></i><b>5.1.2</b> Intervalle de confiance pour l’espérance d’une loi normale avec variance inconnue</a></li>
+<li class="chapter" data-level="5.1.3" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#intervalle-de-confiance-pour-la-variance-dune-loi-normale"><i class="fa fa-check"></i><b>5.1.3</b> Intervalle de confiance pour la variance d’une loi normale</a></li>
+</ul></li>
+<li class="chapter" data-level="5.2" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#intervalle-de-confiance-pour-une-proportion"><i class="fa fa-check"></i><b>5.2</b> Intervalle de confiance pour une proportion</a></li>
+</ul></li>
 <li class="chapter" data-level="6" data-path="tests-dhypotheses.html"><a href="tests-dhypotheses.html"><i class="fa fa-check"></i><b>6</b> Tests d’hypothèses</a></li>
 <li class="part"><span><b>Rappel Probabilités</b></span></li>
 <li class="chapter" data-level="" data-path="variables-aleatoires-discretes.html"><a href="variables-aleatoires-discretes.html"><i class="fa fa-check"></i>Variables Aléatoires Discrètes</a><ul>
@@ -317,7 +324,10 @@ code span.wa { color: #bf0303; } /* Warning */
 </ul></li>
 <li class="appendix"><span><b>Annexe</b></span></li>
 <li class="chapter" data-level="A" data-path="app-introRStudio.html"><a href="app-introRStudio.html"><i class="fa fa-check"></i><b>A</b> Introduction to <code>RStudio</code></a></li>
-<li class="chapter" data-level="B" data-path="tab-normale.html"><a href="tab-normale.html"><i class="fa fa-check"></i><b>B</b> Table de la loi Normale centrée réduite</a></li>
+<li class="chapter" data-level="B" data-path="tab-normale1.html"><a href="tab-normale1.html"><i class="fa fa-check"></i><b>B</b> Table 1 de la loi Normale centrée réduite</a></li>
+<li class="chapter" data-level="C" data-path="tab-normale2.html"><a href="tab-normale2.html"><i class="fa fa-check"></i><b>C</b> Table 2 de la loi Normale centrée réduite</a></li>
+<li class="chapter" data-level="D" data-path="tab-student.html"><a href="tab-student.html"><i class="fa fa-check"></i><b>D</b> Table de la loi de Student</a></li>
+<li class="chapter" data-level="E" data-path="tab-khideux.html"><a href="tab-khideux.html"><i class="fa fa-check"></i><b>E</b> Table de la loi de Khi-deux <span class="math inline">\(\chi^2\)</span></a></li>
 </ul>
 
       </nav>
@@ -629,7 +639,7 @@ les deux méthodes fournissent des estimateurs différents. C’est le cas de la
 </div>
 <div id="qualite-dun-estimateur" class="section level2">
 <h2><span class="header-section-number">3.5</span> Qualité d’un estimateur</h2>
-<p>En toute généralité, <span class="math inline">\(\theta\)</span> peut-être un paramètre à plusieurs dimensions, mais on supposera dans toute cette section et dans la suivante que <span class="math inline">\(\theta\)</span> est un réel. Cela signifie par exemple que, quand <span class="math inline">\(X\)</span> est de loi normale <span class="math inline">\(\mathcal{N}(m,\sigma^2)\)</span>, on s’intéressera séparément à la qualité des estimateurs de <span class="math inline">\(m\)</span> et de <span class="math inline">\(\sigma^2\)</span>. Les estimateurs <span class="math inline">\(T_n\)</span> considérés ici seront donc des variables aléatoires réelles. Pour <span class="math inline">\(\theta \in \mathbb{R}^d, d \geq 2\)</span>, toutes les notions de ces sections sont généralisables, mais la complexité des résultats augmente notablement. Par exemple, la notion de variance est remplacée par celle de matrice de covariance.</p>
+<p>En toute généralité, <span class="math inline">\(\theta\)</span> peut être un paramètre à plusieurs dimensions, mais on supposera dans toute cette section et dans la suivante que <span class="math inline">\(\theta\)</span> est un réel. Cela signifie par exemple que, quand <span class="math inline">\(X\)</span> est de loi normale <span class="math inline">\(\mathcal{N}(m,\sigma^2)\)</span>, on s’intéressera séparément à la qualité des estimateurs de <span class="math inline">\(m\)</span> et de <span class="math inline">\(\sigma^2\)</span>. Les estimateurs <span class="math inline">\(T_n\)</span> considérés ici seront donc des variables aléatoires réelles. Pour <span class="math inline">\(\theta \in \mathbb{R}^d, d \geq 2\)</span>, toutes les notions de ces sections sont généralisables, mais la complexité des résultats augmente notablement. Par exemple, la notion de variance est remplacée par celle de matrice de covariance.</p>
 <div id="estimateur-sans-biais-et-de-variance-minimale-esbvm" class="section level3">
 <h3><span class="header-section-number">3.5.1</span> Estimateur sans biais et de variance minimale (ESBVM)</h3>
 <p>Un estimateur <span class="math inline">\(T_n\)</span> de <span class="math inline">\(\theta\)</span> sera un bon estimateur s’il est suffisamment proche, en un certain sens, de <span class="math inline">\(\theta\)</span>. Il faut donc définir une mesure de l’écart entre <span class="math inline">\(\theta\)</span> et <span class="math inline">\(T_n\)</span>. On appelle cette mesure le <strong>risque</strong> de l’estimateur. On a intérêt à ce que le risque d’un estimateur soit le plus <em>petit</em> possible.</p>
